--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chart.js": "^4.4.3",
     "date-fns": "^2.30.0",
     "history": "^5.3.0",
+    "i18next": "^23.12.2",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
@@ -44,6 +45,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
+    "react-i18next": "^15.0.0",
     "react-router-dom": "^6.16.0",
     "simplebar-react": "^3.2.4"
   },
