--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "vite:build": "vite build"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@faker-js/faker": "^8.1.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
@@ -29,7 +29,7 @@
     "@iconify/react": "^4.1.1",
     "@mui/icons-material": "^5.16.5",
     "@mui/lab": "^5.0.0-alpha.147",
-    "@mui/material": "^5.16.5",
+    "@mui/material": "^5.16.6",
     "@mui/system": "^5.16.5",
     "apexcharts": "^3.43.0",
     "chart.js": "^4.4.3",
@@ -47,7 +47,8 @@
     "react-hook-form": "^7.47.0",
     "react-i18next": "^15.0.0",
     "react-router-dom": "^6.16.0",
-    "simplebar-react": "^3.2.4"
+    "simplebar-react": "^3.2.4",
+    "vite": "^5.3.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.4.0",
@@ -63,7 +64,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "prettier": "^3.0.3",
-    "vite": "^4.4.11",
     "vite-plugin-checker": "^0.6.2"
   }
 }
